--- a/react-app/src/components/NavBar/navBar.css
+++ b/react-app/src/components/NavBar/navBar.css
@@ -3,17 +3,17 @@
   z-index: 10;
   width: 100%;
   top: 0;
-  background-color: rgba(179, 179, 179);
-  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.5);
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 3px 6px -3px rgba(0, 0, 0, 0.5);
 }
 
 .site-header__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1140px;
+  /* max-width: 1140px;
   padding-left: 1rem;
-  padding-right: 1rem;
+  padding-right: 1rem; */
   margin-left: auto;
   margin-right: auto;
   font-size: 1.2rem;
@@ -46,7 +46,7 @@
   position: absolute;
   right: 0;
   margin-top: 1.5rem;
-  background-color: rgba(179, 179, 179);
+  background-color: rgb(255, 255, 255);
   box-shadow: 0 3px 6px -3px rgba(0, 0, 0, 0.5);
   padding: 1rem 0.5rem 0.5rem 0.5rem;
   width: 100%;
