--- a/react-app/src/components/NavBar/navBar.css
+++ b/react-app/src/components/NavBar/navBar.css
@@ -34,12 +34,14 @@
 .navbar__dropdown {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   position: absolute;
   right: 0;
   margin-top: 1.5rem;
   background-color: rgb(255, 255, 255);
   box-shadow: 0 3px 6px -3px rgba(0, 0, 0, 0.5);
   padding: 1rem 0.5rem 0.5rem 0.5rem;
+  box-sizing: border-box;
   width: 100%;
+  padding: 0 10%;
 }
