--- a/react-app/src/components/NavBar/navBar.css
+++ b/react-app/src/components/NavBar/navBar.css
@@ -27,20 +27,27 @@
 }
 
 .nav__item {
-  margin: 0 0.5rem;
-  position: relative;
+  margin-left: 2rem;
 }
 
-.navbar__dropdown {
+.nav__item-active{
+  font-weight: 800;
+}
+
+.nav__dropdown {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   position: absolute;
   right: 0;
-  margin-top: 1.5rem;
+  margin-top: 2.5rem;
   background-color: rgb(255, 255, 255);
   box-shadow: 0 3px 6px -3px rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
   width: 100%;
   padding: 0 10%;
+}
+
+.nav__dropdown__item {
+  padding-bottom: 1rem;
 }
