--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -7,6 +7,7 @@ body {
 
 .ev-after-nav {
   padding: 0 10%;
+  margin-top: 2rem;
 }
 
 button {
@@ -26,4 +27,9 @@ a {
 
 *:focus {
   outline: none;
+}
+
+.button-primary {
+  background-color: whitesmoke;
+  padding: 1rem;
 }
