--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -34,6 +34,7 @@ a {
   background-color: rgb(138, 138, 138);
   border-radius: 0.5rem;
   padding: 1rem;
+  font-size: 1.1rem;
 }
 
 .button-primary:hover {
