--- a/react-app/src/components/NavBar/navBar.css
+++ b/react-app/src/components/NavBar/navBar.css
@@ -1,4 +1,6 @@
 .site-header {
+  position: relative;
+  z-index: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -30,17 +32,20 @@
   margin-left: 2rem;
 }
 
-.nav__item-active{
+.nav__item-active {
   font-weight: 800;
 }
 
+/* dropdown styling */
 .nav__dropdown {
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   position: absolute;
   right: 0;
-  margin-top: 2.5rem;
+  margin-top: 2.75rem;
   background-color: rgb(255, 255, 255);
   box-shadow: 0 3px 6px -3px rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
@@ -48,6 +53,23 @@
   padding: 0 10%;
 }
 
+.nav__dropdown__button-closed {
+  color: black;
+}
+
+.nav__dropdown__button-open {
+  color: grey;
+}
+
 .nav__dropdown__item {
   padding-bottom: 1rem;
+}
+
+.nav__dropdown__rest-of-page {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: transparent;
 }
