--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,7 +1,10 @@
 /* TODO Add site wide styles */
 body {
+  position: relative;
   margin: 0;
+  padding: 0;
   font-family: 'Open Sans', sans-serif;
+  min-height: 100vh;
 }
 
 /* custom css variables */
@@ -10,10 +13,10 @@ body {
   --primary-color-light: rgb(88, 181, 242);
   --primary-color-dark: rgb(14, 119, 189);
   /* --primary-color: rgb(77, 111, 245); */
-  --secondary-color: rgb(138, 138, 138);
-  --secondary-color-light: rgb(245, 245, 245);
-  --tertiary-color: rgb(238, 114, 32);
-  /* --tertiary-color: rgb(245, 211, 77); */
+  --secondary-color: rgb(238, 114, 32);
+  /* --secondary-color: rgb(245, 211, 77); */
+  --tertiary-color: rgb(138, 138, 138);
+  --tertiary-color-light: rgb(245, 245, 245);
 }
 
 /* reset css */
@@ -79,6 +82,12 @@ a {
 }
 
 /* for app.js */
+.btwn-nav-footer {
+  padding: 0 10%;
+  margin-top: 2rem;
+  padding-bottom: 3rem;
+}
+
 .loading {
   color: rgb(122, 122, 122);
   position: fixed;
