--- a/react-app/src/components/NavBar/navBar.css
+++ b/react-app/src/components/NavBar/navBar.css
@@ -73,7 +73,7 @@
 }
 
 .nav__dropdown__button-open {
-  color: var(--secondary-color);
+  color: var(--tertiary-color);
 }
 
 .nav__dropdown__item {
@@ -82,7 +82,7 @@
 
 .nav__dropdown__rest-of-page {
   position: fixed;
-  top: 0;
+  top: 4rem;
   right: 0;
   left: 0;
   bottom: 0;
