--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -18,7 +18,7 @@
 }
 
 .footer__icon {
-  color: var(--primary-color-dark);
+  color: var(--primary-color);
   padding: 0 0.25rem;
   cursor: pointer;
 }
