Center user info data text on small screens

--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -28,6 +28,9 @@
   .user_info {
     flex-direction: column;
   }
+  .user_info__data {
+    text-align: center;
+  }
   .user_info__form {
     flex-direction: column !important;
   }
