--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -9,15 +9,21 @@ body {
 
 /* custom css variables */
 :root {
+  /* ----- colors ----- */
   --primary-color: rgb(14, 119, 189);
   --primary-color-light: rgb(32, 156, 238);
-  /* --primary-color-light: rgb(88, 181, 242); */
   --secondary-color: rgb(238, 114, 32);
+  --secondary-color-light: rgb(242, 150, 88);
   --tertiary-color: rgb(138, 138, 138);
   --tertiary-color-light: rgb(245, 245, 245);
-
-  --primary-border: var(--primary-color) solid 2px;
+  --delete-color:rgb(173, 0, 0);
+  --delete-color-light: rgb(255, 61, 61);
+  
+  /* ----- borders ----- */
+  --primary-border: var(--primary-color) solid 1px;
   --pimrary-radius: 0.5rem;
+  --tertiary-border: var(--tertiary-color) solid 1px;
+  --delete-border: var(--delete-color) solid 1px
 }
 
 /* reset css */
@@ -74,7 +80,8 @@ a {
   }
 }
 
-/* global classes */
+/* GLOBAL CLASSES */
+/* --------------- buttons --------------- */
 .primary-button {
   color: rgb(255, 255, 255);
   font-weight: 700;
@@ -91,10 +98,11 @@ a {
   box-shadow: 2px 2px 4px rgb(0, 0, 0, 0.3);
 }
 
-/* .primary-button:focus {
+.primary-button:focus {
   background-color: var(--primary-color);
+  border-color: var(--primary-color);
   box-shadow: none;
-} */
+}
 
 .secondary-button {
   color: var(--primary-color);
@@ -109,18 +117,39 @@ a {
 .secondary-button:hover {
   color: var(--primary-color-light);
   border-color: var(--primary-color-light);
-  /* background-color: var(--tertiary-color-light); */
-
   box-shadow: 2px 2px 4px rgb(0, 0, 0, 0.3);
 }
 
-.errors-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: rgb(255, 83, 83);
+.secondary-button:focus {
+  color: var(--primary-color);
+  border-color: var(--primary-color);
+  box-shadow: none;
 }
 
+.delete-button {
+  color: var(--delete-color);
+  font-weight: 700;
+  border: var(--delete-border);
+  background-color: rgb(255, 255, 255);
+  border-radius: var(--pimrary-radius);
+  padding: 1rem;
+  font-size: 1.1rem;
+}
+
+.delete-button:hover {
+  color: var(--delete-color-light);
+  border-color: var(--delete-color-light);
+  box-shadow: 2px 2px 4px rgb(0, 0, 0, 0.3);
+}
+
+.delete-button:focus {
+  color: var(--delete-color);
+  border-color: var(--delete-color);
+  box-shadow: none;
+}
+
+
+/* --------------- titles --------------- */
 .primary-title {
   color: var(--primary-color);
   text-align: center;
@@ -136,7 +165,7 @@ a {
   text-align: center;
 }
 
-/* Form classes */
+/* --------------- Forms --------------- */
 .form-container {
   display: flex;
   flex-direction: column;
@@ -174,17 +203,24 @@ a {
   margin: 0.75rem;
   padding: 1rem;
   border-radius: var(--pimrary-radius);
-  border: var(--tertiary-color) solid 1px;
+  border: var(--tertiary-border);
   font-size: 1.1rem;
   box-sizing: border-box;
 }
 
 .form__input:focus, .form__input:focus-within {
   background-color: var(--tertiary-color-light);
-  border: var(--primary-color) solid 2px;
+  border: var(--primary-color) solid 1px;
 }
 
-.button {
+.form__button {
   margin-top: 0.75rem;
   width: 50%;
+}
+
+.errors-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: rgb(255, 83, 83);
 }
