--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -16,14 +16,14 @@ body {
   --secondary-color-light: rgb(242, 150, 88);
   --tertiary-color: rgb(138, 138, 138);
   --tertiary-color-light: rgb(245, 245, 245);
-  --delete-color:rgb(173, 0, 0);
+  --delete-color: rgb(173, 0, 0);
   --delete-color-light: rgb(230, 0, 0);
-  
+
   /* ----- borders ----- */
   --primary-border: var(--primary-color) solid 1px;
   --pimrary-radius: 0.5rem;
   --tertiary-border: var(--tertiary-color) solid 1px;
-  --delete-border: var(--delete-color) solid 1px
+  --delete-border: var(--delete-color) solid 1px;
 }
 
 /* reset css */
@@ -96,9 +96,10 @@ a {
   background-color: var(--primary-color-light);
   border-color: var(--primary-color-light);
   box-shadow: 2px 2px 4px rgb(0, 0, 0, 0.3);
+  transform: translateY(-0.5px);
 }
 
-.primary-button:focus {
+.primary-button:active {
   background-color: var(--primary-color);
   border-color: var(--primary-color);
   box-shadow: none;
@@ -118,9 +119,10 @@ a {
   color: var(--primary-color-light);
   border-color: var(--primary-color-light);
   box-shadow: 2px 2px 4px rgb(0, 0, 0, 0.3);
+  transform: translateY(-0.5px);
 }
 
-.secondary-button:focus {
+.secondary-button:active {
   color: var(--primary-color);
   border-color: var(--primary-color);
   box-shadow: none;
@@ -147,7 +149,6 @@ a {
   border-color: var(--delete-color);
   box-shadow: none;
 }
-
 
 /* --------------- titles --------------- */
 .primary-title {
@@ -208,7 +209,8 @@ a {
   box-sizing: border-box;
 }
 
-.form__input:focus, .form__input:focus-within {
+.form__input:focus,
+.form__input:focus-within {
   background-color: var(--tertiary-color-light);
   border: var(--primary-color) solid 1px;
 }
