Change css to broader names for dashboard

--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -20,7 +20,7 @@
 
 /* user info */
 
-.user_info__form {
+.dashboard__form {
   flex-direction: row !important;
   width: 100% !important;
   justify-content: space-around;
@@ -30,38 +30,38 @@
   .user_info {
     flex-direction: column;
   }
-  .user_info__data {
+  .dashboard__data {
     text-align: center;
   }
-  .user_info__form {
+  .dashboard__form {
     flex-direction: column !important;
   }
 }
 
-.user_info__input {
+.dashboard__input {
   margin: 0.5rem !important;
   padding: 0.5rem !important;
 }
 
-.user_info__buttons {
+.dashboard__buttons {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 50% !important;
 }
 
-.user_info__data,
-.user_info__button {
+.dashboard__data,
+.dashboard__button {
   font-size: 1.1rem;
   font-weight: 1000;
 }
-.user_info__data {
+.dashboard__data {
   padding: 0 1rem;
   width: 100%;
   text-shadow: 0.5px 0 #000;
 }
 
-.user_info__button {
+.dashboard__button {
   display: flex;
   justify-content: center;
   margin: 0.5rem !important;
