--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -142,6 +142,7 @@ a {
   color: var(--delete-color-light);
   border-color: var(--delete-color-light);
   box-shadow: 2px 2px 4px rgb(0, 0, 0, 0.3);
+  transform: translateY(-0.5px);
 }
 
 .delete-button:focus {
