--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -18,8 +18,6 @@
   min-height: 14rem;
 }
 
-/* user info */
-
 .dashboard__form {
   flex-direction: row !important;
   width: 100% !important;
@@ -111,6 +109,16 @@
 .client-row > p {
   margin: 0.5rem 0 0 0;
 }
+
+.client-name {
+  cursor: pointer;
+}
+
+.client-name:hover {
+  text-shadow: 0.5px 0 #000;
+}
+
+/* Mobile view */
 
 @media (max-width: 800px) {
   .user__info {
