--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -102,6 +102,11 @@
   flex-direction: column;
   align-items: center;
   width: 50% !important;
+  margin: 0 1rem;
+}
+
+.gnerate-test-url__dropdown {
+  max-width: 11rem;
 }
 
 @media (max-width: 800px) {
